<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Medium"
                android:text="@string/amount_min"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Medium"
                android:id="@+id/tv_amount"/>
        </LinearLayout>
        <com.olamide.findartt.views.MaxHeightNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:maxHeight="250dp"
            android:id="@+id/bid_frame"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_bids">

            </androidx.recyclerview.widget.RecyclerView>


        </com.olamide.findartt.views.MaxHeightNestedScrollView>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/et_bid_amount"
            android:layout_height="match_parent"
            android:hint="@string/bid_amount_string"
            style="@style/AppTheme.EditText"
            android:inputType="numberDecimal"/>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sold"
                style="@style/AppTheme.TextView.Medium"
                android:text="@string/bid_string_accepted"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_bid"
                android:text="@string/bid_string"
                android:contentDescription="@string/bid_string"
                style="@style/AppTheme.Button"
                android:layout_gravity="end"/>
        </FrameLayout>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>