<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_sug"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:orientation="vertical">




                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:src="@drawable/findart11" />

                </FrameLayout>


                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />

                <EditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/fname"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />

                <EditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/lname"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />



                <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                     />

                <EditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />




                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />


                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/color_secondary_text"
                    android:textColorHint="@color/color_secondary_text" />





                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/color_accent"
                    android:text="@string/signup"
                    android:elevation="4dp"
                    android:textColor="@color/color_primary_text" />


                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:gravity="center">-->


                <!--<ImageButton-->
                <!--android:id="@+id/btn_login_google"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:background="@color/light_grey"-->
                <!--android:src="@drawable/ic_gplus" />-->


                <!--</LinearLayout>-->


            </LinearLayout>


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>




    <TextView
        android:id="@+id/login_sug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="10dp"
        android:text="@string/login_suggest"
        android:textColor="@color/color_primary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
