<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ltgray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="110dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/findart11"/>

                </RelativeLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp">


                    <EditText
                        android:id="@+id/edtLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"

                        android:drawablePadding="15dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/color_secondary_text"
                        android:textColorHint="@color/color_secondary_text"/>


                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp">


                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:drawablePadding="15dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/color_secondary_text"
                        android:textColorHint="@color/color_secondary_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/chb_remember_me"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remember"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_accent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:text="@string/login"
                        android:textColor="@color/ltgray"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <!--<com.kolanut_new.customui.cTextviewRegular-->
                        <!--android:id="@+id/cTextviewRegular"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="Or Log In with"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:textSize="@dimen/_14sdp"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center">



                    <ImageButton
                        android:id="@+id/btn_login_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/ltgray"
                        android:src="@drawable/ic_gplus"/>

                    <!--<ImageButton-->
                    <!--android:id="@+id/btn_login_instagram"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="@dimen/_10sdp"-->
                    <!--android:background="@color/white"-->
                    <!--android:src="@drawable/ic_instagram"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_suggest"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text=" Register"
                        android:textColor="@color/color_primary_text"
                        android:textSize="14sp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
    </RelativeLayout>
</ScrollView>